fix pr comments and solar smell
Signed-off-by: Lev Povolotsky <lev@swirldslabs.com>